--- a/p8105_hw6_sc4934.md
+++ b/p8105_hw6_sc4934.md
@@ -3,6 +3,15 @@ p8105_hw6_SC4934
 Sophia Chkonia
 2022-12-01
 
+``` r
+library(tidyverse)
+library(p8105.datasets)
+library(viridis)
+library(rvest)
+```
+
+# Problem 1
+
 # Problem 2
 
 ## import and tidy
@@ -22,11 +31,28 @@ read_csv(
   filter(victim_race %in% c("White", "Black"))
 ```
 
-    ## Rows: 52179 Columns: 12
-    ## ── Column specification ────────────────────────────────────────────────────────
-    ## Delimiter: ","
-    ## chr (9): uid, victim_last, victim_first, victim_race, victim_age, victim_sex...
-    ## dbl (3): reported_date, lat, lon
-    ## 
-    ## ℹ Use `spec()` to retrieve the full column specification for this data.
-    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+## Regression
+
+``` r
+baltimore = homicide %>% 
+  filter(city_state == "Baltimore, MD")
+
+fit_logistic = 
+  baltimore %>% 
+  glm(solved ~ victim_age + victim_race + victim_sex, data = ., family = binomial()) 
+
+fit_logistic %>% 
+  broom::tidy() %>% 
+  mutate(OR = exp(estimate)) %>% 
+  select(term, estimate, OR, p.value) %>% 
+  knitr::kable(digits = 3) 
+
+exp(confint(fit_logistic))
+```
+
+The estimate is -1.037. The adjsuted odds ratio is 0.355, and the
+confidence interval is (0.267, 0.468).
+
+Homicides in which the victim is Male are substantially less likely to
+be resolved compared to homicides in which the victim is female, keeping
+all other variables fixed.
